[hotfix] 서버 최적화
Signed-off-by: parkwoorim <woorimprog@gmail.com>

--- a/server/client/views/home/main.ejs
+++ b/server/client/views/home/main.ejs
@@ -15,15 +15,13 @@
   <!-- 타이틀 -->
   <h1 class="title">HANGO SERVER MAIN</h1>
   <span>골라골라팀의 행고 프로젝트 서버 메인입니다.</span><br>
-  <span>아두이노와 모바일간 통신을 위해 구축되었으며, 해당 UI는 단순히 서버의 동작 확인용으로 개발되었습니다.</span>
   <span>하드웨어와 모바일간 통신을 위해 구축되었으며, 해당 UI는 단순히 서버의 동작 확인용입니다.</span><br>
   <span>행고 프로젝트는 "시각장애인도 먹고 싶은 자판기 음료를 고민하도록 해주자"는 취지와 목적을 갖습니다.</span><br>
-  <span>열정으로 뭉친 '골라골라'는 2020년 7월 18일에 팀계정을 생성하고 지금까지 단 하루도 개발이 끊기지 않았으며, 1일 1커밋이 기본 원칙이자 자랑입니다.</span><br><br>
+  <span>열정으로 뭉친 '골라골라'는 2020년 7월 18일에 팀계정을 생성하고 지금까지 단 하루도 개발이 끊기지 않았으며, 'One Day One Contribution'이 기본 원칙이자 자랑입니다.</span><br><br>
   
-  <a href="https://github.com/golagola2020">골라골라 깃허브 계정 바로가기</a><br>
-  <a href="https://github.com/golagola2020/hango-server">서버 레포지토리 바로가기</a><br>
-  <a href="https://github.com/golagola2020/hango-client">클라이언트 레포지토리 바로가기</a><br>
-
-  <h3>SERVER : hango<br>DATABASE : hango_client</h3>
+  <h1 class="title">Github Repository</h1>
+  <a href="https://github.com/golagola2020">Golagola</a><br>
+  <a href="https://github.com/golagola2020/hango-server">hango-server</a><br>
+  <a href="https://github.com/golagola2020/hango-client">hango-client</a><br>
 </body>
 </html>
