--- a/server/client/views/admin/vending/main.ejs
+++ b/server/client/views/admin/vending/main.ejs
@@ -7,10 +7,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <script src="https://kit.fontawesome.com/4067fec9b0.js" crossorigin="anonymous"></script>
-
-    <link rel="stylesheet" href="/css/admin/main.css">
-    <script type="module" src="/js/admin/main.js" defer></script>
+    <link rel="stylesheet" href="/css/admin/vending/main.css">
+    <script type="module" src="/js/admin/vending/main.js" defer></script>
 
     <title>Hango 관리자 시스템</title>
 </head>
