--- a/server/client/views/admin/vending/main.ejs
+++ b/server/client/views/admin/vending/main.ejs
@@ -14,19 +14,29 @@
 </head>
 
 <body>
-    <!-- 로그인 폼 -->
-    <section id="vending-create-form">
-      <h1>자판기 등록</h1>
+  <h1>자판기 목록</h1>
+  
+  <!-- 자판기 목록 -->
+  <section id="vending-list-form">
+    <!-- 조회 테이블 -->
+    <table id="read-table">
+      <thead>
+          <tr id=field>
+              <th>시리얼번호</th>
+              <th>사용자 아이디</th>
+              <th>자판기 이름</th>
+              <th>등록일</th>
+          </tr>
+      </thead>
 
-      <article id="user-input">
-        <label for="id">관리자 아이디</label>
-        <input type="text" class="input" placeholder="아이디" id="id" name="id">
-      </article>
+      <tbody></tbody>
+    </table>
+  </section>
 
-      <article id="btns">
-        <button id="vending-create-btn">등록</button>
-      </article>
-    </section>
+  <!-- 버튼 -->
+  <article id="btns">
+    <button id="vending-create-btn">자판기 등록</button>
+  </article>
 </body>
 
 </html>
