--- a/server/public/css/admin/vending/main.css
+++ b/server/public/css/admin/vending/main.css
@@ -7,52 +7,77 @@ body {
   color: var(--main-font-color);
 }
 
-#vending-create-form {
+/* 자판기 목록 박스 */
+#vending-list-form {
   display: flex;
   flex-direction: column;
   position: relative;
-  top: 25%;
+  top: 7%;
+  width: 80vw;
+  max-height: 70vh;
+  overflow-y: scroll;
   margin: 0 auto 0 auto;
-  width: 50vw;
   padding: 20px;
   box-shadow: 4px 4px 7px 1px var(--main-color);
   border-radius: 8px;
   background-color: var(--form-bg-color);
 }
 
-#vending-create-form h1 {
+h1 {
+  position: relative;
+  top: 5%;
+  width: 80vw;
+  margin: 0 auto 0 auto;
+  padding: 20px;
+  box-shadow: 4px 4px 7px 1px var(--main-color);
+  border-radius: 8px;
+  background-color: var(--form-bg-color);
   font-size: var(--font-large);
   font-weight: 700;
 }
 
-#vending-create-form #user-input {
-  display: flex;
-  flex-direction: column;
-  width: 40vw;
-  margin: 20px 5vw;
+/* 테이블 */
+#read-table {
+  table-layout: fixed;
+  width: 100%;
+}
+
+/* 필드 */
+#read-table thead #field th{
+  padding: 10px;
   font-size: var(--font-medium);
-  font-weight: 500;
-}
-
-#vending-create-form #user-input label {
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-#vending-create-form #user-input .input {
-  height: 40px;
-  margin-bottom: 20px;
-  padding-left: 8px;
+  font-weight: 700;
   border: 1px solid var(--main-color);
-  border-radius: 2px;
+  white-space: nowrap; 
 }
 
-#vending-create-form #btns {
+/* 레코드 */
+#read-table tbody tr:hover {
+  cursor: pointer;
+  color: gray;
+}
+
+#read-table tbody tr:active {
+  transform: scale(0.99);
+}
+
+#read-table tbody td {
+  text-align: center;
+  padding: 10px;
+  border: 1px solid var(--main-color);
+  white-space: nowrap; 
+  overflow: hidden; 
+  text-overflow: ellipsis;
+}
+
+#btns {
   display: flex;
   justify-content: center;
+  position: relative;
+  top: 10%;
 }
 
-#vending-create-form #btns button {
+#btns button {
   width: 100px;
   margin: 0 0 20px 0;
   padding: 10px 5px;
@@ -63,11 +88,11 @@ body {
   background-color: var(--main-bg-color);
 }
 
-#vending-create-form #btns button:hover {
+#btns button:hover {
   cursor: pointer;
   transform: scale(1.04);
 }
 
-#vending-create-form #btns button:active {
+#btns button:active {
   transform: scale(1.00);
 }
