[admin/editDesign] 관리자 시스템 UI 수정
Signed-off-by: 박우림 <woorimprog@gmail.com>

--- a/server/client/views/admin/vending/detail.ejs
+++ b/server/client/views/admin/vending/detail.ejs
@@ -23,7 +23,7 @@
 
     <div class="text" id="serial-number">시리얼 넘버 : <span></span></div>
     <div class="text" id="user-id">사용자 아이디 : <span></span></div>
-    <div class="text" id="description">설명 : <span></span></div>
+    <div class="text" id="description">설명 : <span></span></div><br>
     <div class="text" id="in-date">등록일 : <span></span></div>
     <div class="text" id="update-date">수정일 : <span></span></div>
   </section>
