--- a/server/client/views/admin/vending/main.ejs
+++ b/server/client/views/admin/vending/main.ejs
@@ -17,7 +17,7 @@
   <h1>자판기 목록</h1>
   
   <!-- 자판기 목록 -->
-  <section id="vending-list-form">
+  <article id="vending-list-form">
     <!-- 조회 테이블 -->
     <table id="read-table">
       <thead>
@@ -31,7 +31,7 @@
 
       <tbody></tbody>
     </table>
-  </section>
+  </article>
 
   <!-- 버튼 -->
   <article id="btns">
