--- a/server/public/css/admin/vending/create.css
+++ b/server/public/css/admin/vending/create.css
@@ -1,6 +1,9 @@
 @import "../../reset.css";
 
 body {
+  display: flex;
+	align-items: center;
+	justify-content: center;
   height: 100vh;
   margin: 0;
   background: linear-gradient(90deg, var(--bg-left-color) 50%, var(--bg-right-color) 50%);
@@ -10,9 +13,6 @@ body {
 #vending-create-form {
   display: flex;
   flex-direction: column;
-  position: relative;
-  top: 25%;
-  margin: 0 auto 0 auto;
   width: 50vw;
   padding: 20px;
   box-shadow: 4px 4px 7px 1px var(--main-color);
