[admin/vending] 자판기 메인 페이지 '뒤로가기'버튼 추가
Signed-off-by: 박우림 <woorimprog@gmail.com>

--- a/server/client/views/admin/vending/main.ejs
+++ b/server/client/views/admin/vending/main.ejs
@@ -35,6 +35,7 @@
 
   <!-- 버튼 -->
   <article id="btns">
+    <button id="back-btn">뒤로가기</button>
     <button id="vending-create-btn">자판기 등록</button>
   </article>
 </body>
