--- a/server/public/css/admin/vending/main.css
+++ b/server/public/css/admin/vending/main.css
@@ -79,7 +79,7 @@ h1 {
 
 #btns button {
   width: 100px;
-  margin: 0 0 20px 0;
+  margin: 0 10px 20px 10px;
   padding: 10px 5px;
   font-size: var(--font-medium);
   outline: none;
