[admin/vending] 자판기 상세 페이지 '뒤로가기' 버튼 추가
Signed-off-by: 박우림 <woorimprog@gmail.com>

--- a/server/client/views/admin/vending/detail.ejs
+++ b/server/client/views/admin/vending/detail.ejs
@@ -23,13 +23,16 @@
 
     <div class="text" id="serial-number">시리얼 넘버 : <span></span></div>
     <div class="text" id="user-id">사용자 아이디 : <span></span></div>
-    <div class="text" id="description">설명 : <span></span></div><br>
+    <div class="text" id="description">설명 : <span></span></div>
+    <div class="text" id="full-size">최대 칸 수 : <span></span></div><br>
     <div class="text" id="in-date">등록일 : <span></span></div>
     <div class="text" id="update-date">수정일 : <span></span></div>
   </section>
 
   <!-- 버튼 -->
   <article id="btns">
+    <button id="back-btn">뒤로가기</button>
+    <button id="vending-update-btn">수정</button>
     <button id="vending-delete-btn">삭제</button>
   </article>
 </body>
