[admin/search] font-small 변수 추가
Signed-off-by: 박우림 <woorimprog@gmail.com>

--- a/server/public/css/reset.css
+++ b/server/public/css/reset.css
@@ -2,7 +2,8 @@
 :root {
   /* size */
   --font-large: 1.5em;
-  --font-medium: 1em;
+	--font-medium: 1em;
+	--font-small: 0.6em;
 
   /* color */
   --main-color: #9bcbea;
