--- a/server/client/views/admin/user/main.ejs
+++ b/server/client/views/admin/user/main.ejs
@@ -14,7 +14,22 @@
 </head>
 
 <body>
-  <h1>사용자 목록</h1>
+  <!-- 헤더 -->
+  <header>
+    <h1>사용자 목록</h1>
+
+    <!-- 검색창 -->
+    <article id="search-form">
+      <select name="search-tab" id="search-tab">
+        <option value="whole">전체</option>
+        <option value="user_id">아이디</option>
+        <option value="user_name">이름</option>
+        <option value="user_email">이메일</option>
+      </select>
+
+      <input type="text" id="search-input" placeholder="검색">
+      <button id="search-btn">검색</button>
+  </header>
   
   <!-- 사용자 목록 -->
   <article id="user-list-form">
