--- a/server/public/css/admin/user/main.css
+++ b/server/public/css/admin/user/main.css
@@ -7,6 +7,51 @@ body {
   color: var(--main-font-color);
 }
 
+header {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  top: 5%;
+  width: 80vw;
+  margin: 0 auto 0 auto;
+  padding: 20px;
+  box-shadow: 4px 4px 7px 1px var(--main-color);
+  border-radius: 8px;
+  background-color: var(--form-bg-color);
+  font-size: var(--font-large);
+  font-weight: 700;
+}
+
+#search-form {
+  display: flex;
+  align-items: center;
+}
+
+#search-tab {
+  font-size: var(--font-small);
+  padding: 1px;
+}
+
+#search-tab:hover {
+  cursor: pointer;
+}
+
+#search-input {
+  margin-left: 4px;
+  font-size: var(--font-small);
+}
+
+#search-btn {
+  height: 95%;
+  margin-left: 4px;
+  padding: 2px px;
+  font-size: var(--font-small);
+  outline: none;
+  border: 1px solid var(--main-color);
+  border-radius: 2px;
+  background-color: var(--main-bg-color);
+}
+
 /* 자판기 목록 박스 */
 #user-list-form {
   display: flex;
@@ -21,19 +66,6 @@ body {
   box-shadow: 4px 4px 7px 1px var(--main-color);
   border-radius: 8px;
   background-color: var(--form-bg-color);
-}
-
-h1 {
-  position: relative;
-  top: 5%;
-  width: 80vw;
-  margin: 0 auto 0 auto;
-  padding: 20px;
-  box-shadow: 4px 4px 7px 1px var(--main-color);
-  border-radius: 8px;
-  background-color: var(--form-bg-color);
-  font-size: var(--font-large);
-  font-weight: 700;
 }
 
 /* 테이블 */
