[hotfix] 사용자 관리화면에 검색 버튼 액션 적용
Signed-off-by: 박우림 <woorimprog@gmail.com>

--- a/server/client/views/admin/user/main.ejs
+++ b/server/client/views/admin/user/main.ejs
@@ -49,7 +49,7 @@
   </article>
 
   <!-- 버튼 -->
-  <article id="btns">
+  <article class="btns">
     <button id="back-btn">뒤로가기</button>
   </article>
 </body>
