--- a/server/client/views/admin/login.ejs
+++ b/server/client/views/admin/login.ejs
@@ -27,6 +27,7 @@
 
     <article id="btns">
       <button id="login-btn">로그인</button>
+      <button id="signup-btn">회원가입</button>
     </article>
   </section>
 </body>
