--- a/server/public/css/admin/login.css
+++ b/server/public/css/admin/login.css
@@ -55,6 +55,7 @@ body {
 
 #login-form #btns button {
   width: 100px;
+  margin: 0 10px 20px 10px;
   padding: 10px 5px;
   font-size: var(--font-medium);
   outline: none;
