--- a/server/public/css/admin/vending/update.css
+++ b/server/public/css/admin/vending/update.css
@@ -2,15 +2,19 @@
 
 body {
   display: flex;
-	align-items: center;
-	justify-content: center;
+  align-items: center;
+  justify-content: center;
   height: 100vh;
   margin: 0;
-  background: linear-gradient(90deg, var(--bg-left-color) 50%, var(--bg-right-color) 50%);
+  background: linear-gradient(
+    90deg,
+    var(--bg-left-color) 50%,
+    var(--bg-right-color) 50%
+  );
   color: var(--main-font-color);
 }
 
-body>h1 {
+body > h1 {
   position: relative;
   top: 5%;
   width: 80vw;
@@ -63,7 +67,6 @@ body>h1 {
 #vending-update-form #btns {
   display: flex;
   justify-content: center;
-
 }
 
 #vending-update-form #btns button {
@@ -83,5 +86,5 @@ body>h1 {
 }
 
 #btns button:active {
-  transform: scale(1.00);
+  transform: scale(1);
 }
