--- a/server/public/css/admin/home.css
+++ b/server/public/css/admin/home.css
@@ -8,7 +8,11 @@
 body {
   height: 100vh;
   margin: 0;
-  background: linear-gradient(90deg, var(--bg-left-color) 50%, var(--bg-right-color) 50%);
+  background: linear-gradient(
+    90deg,
+    var(--bg-left-color) 50%,
+    var(--bg-right-color) 50%
+  );
   color: var(--main-font-color);
 }
 
