[v1.3.1/view] 뷰 수정 -> 자판기 소유자로 명명
Signed-off-by: 박우림 <woorimprog@gmail.com>

--- a/server/src/client/views/admin/home.ejs
+++ b/server/src/client/views/admin/home.ejs
@@ -13,6 +13,6 @@
 <body>
   <p id="question">What do you want to see?</p>
   <h1 class="menu" id='left'>자판기 관리</h1>
-  <h1 class="menu" id='right'>사용자 관리</h1>
+  <h1 class="menu" id='right'>소유자 관리</h1>
 </body>
 </html>
