--- a/server/src/client/views/admin/user/detail.ejs
+++ b/server/src/client/views/admin/user/detail.ejs
@@ -14,10 +14,10 @@
 </head>
 
 <body>
-  <h1>사용자 상세 정보</h1>
+  <h1>자판기 소유자 상세 정보</h1>
   <hidden value="<%= userId %>"></hidden>
   
-  <!-- 사용자 상세 -->
+  <!-- 자판기 소유자 상세 -->
   <section id="user-detail-form">
     <h1></h1>
 
