--- a/server/src/client/views/admin/vending/main.ejs
+++ b/server/src/client/views/admin/vending/main.ejs
@@ -39,7 +39,7 @@
       <thead>
           <tr id=field>
               <th>시리얼번호</th>
-              <th>사용자 아이디</th>
+              <th>소유자 아이디</th>
               <th>자판기 이름</th>
               <th>등록일</th>
           </tr>
