--- a/server/src/client/views/admin/user/main.ejs
+++ b/server/src/client/views/admin/user/main.ejs
@@ -16,7 +16,7 @@
 <body>
   <!-- 헤더 -->
   <header>
-    <h1>사용자 목록</h1>
+    <h1>자판기 소유자 목록</h1>
 
     <!-- 검색창 -->
     <article id="search-form">
@@ -31,13 +31,13 @@
       <button id="search-btn">검색</button>
   </header>
   
-  <!-- 사용자 목록 -->
+  <!-- 자판기 소유자 목록 -->
   <article id="user-list-form">
     <!-- 조회 테이블 -->
     <table id="read-table">
       <thead>
           <tr id=field>
-              <th>사용자 아이디</th>
+              <th>자판기 소유자 아이디</th>
               <th>이름</th>
               <th>이메일</th>
               <th>등록일</th>
