--- a/server/src/client/views/admin/user/update.ejs
+++ b/server/src/client/views/admin/user/update.ejs
@@ -17,9 +17,9 @@
 <body>
   <hidden value="<%= user_id %>"></hidden>
   
-  <!-- 사용자 상세 -->
+  <!-- 자판기 소유자 상세 -->
   <section id="user-update-form">
-    <h1>사용자 수정</h1>
+    <h1>자판기 소유자 수정</h1>
 
     <article id="user-update-input">
       <label for="id">아이디</label>
