--- a/server/src/client/views/admin/vending/create.ejs
+++ b/server/src/client/views/admin/vending/create.ejs
@@ -19,7 +19,7 @@
       <h1>자판기 등록</h1>
 
       <article id="user-input">
-        <label for="id">관리자 아이디</label>
+        <label for="id">자판기 소유자 아이디</label>
         <input type="text" class="input" placeholder="아이디" id="id" name="id">
       </article>
 
